# PointCloudT

./: .gitignore  AGENTS.md  README.md  index.html  start.sh
docs/: AGENT_TASKS.md  AUCKLAND_COUNCIL_API_NOTES.md  AWS_DEPLOYMENT_MANAGEMENT_SAFE.xlsx  AWS_TEST_DEPLOYMENT.md  CLERK_SERVER_AUTH_HANDOFF_V1.md  DAILY_REPORT_2026-06-15.md  DAILY_REPORT_2026-06-17.md  LAS_EPSG_COORDINATE_WORKFLOW_V1.md  LAS_TO_TOPVIEW_DESIGN.md  LAWN_RECOGNITION_DRAFT_V1.md  MAP_SCHEMA.md  MOWING_PLATFORM_DESIGN_V1.md  MOWING_PLATFORM_FUNCTIONAL_SPEC_V1.docx  MOWING_PLATFORM_FUNCTIONAL_SPEC_V1.md  MOWING_PLATFORM_IMPLEMENTATION_PLAN_V1.md  MOWING_PLATFORM_PHASE1_BACKLOG_V1.md  MOWING_PLATFORM_REQUIREMENTS_V1.md  MQTT_VENDOR_INTEGRATION_STANDARD_V1.md  PHASE_ARCHIVE_2026-06-01.md  PILOT_GO_LIVE_RUNBOOK_V1.md  PRD.md  PROJECT_MEMORY.md  PROJECT_SUMMARY_2026-06-19.md  REGISTRATION_WORKFLOW_V1.md  ROBOT_COORDINATE_ALIGNMENT_SPEC_V1.md  SYSTEM_DESIGN_2026-06-19.md  aws-usage-report-2026-06-21.html  registration_lab.html
mowing-platform/: .dockerignore  .env.example  Dockerfile  PROJECT_ARCHIVE_2026-06-15.md  README.md  address_service.py  admin-app.js  admin-prototype.html  app.py  auth_service.py  customer.html  data.py  models.py  mqtt_monitor.py  provider.html  pyproject.toml  routes.py  schema.sql  store.py
mowing-platform/css/: admin.css  portal-theme.css
mowing-platform/js/: api.js  app.js  autocomplete.js  clerk-auth.js  constants.js  render.js  utils.js
mowing-platform/tests/: conftest.py  test_routes.py  test_store.py
scripts/: aws_strict_auth_smoke.sh  extract_lawn_mask.py  (+6 more)
(+110 files in other folders)
