[project]
name = "mowing-platform"
version = "0.1.0"
description = "GardenOS 割草服务平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
timeout = 30

[tool.ruff]
# Code style / 代码风格
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long / 行太长
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]
